Fix header layout bug (to avoid crowding)

--- a/src/stylesheets/_header.scss
+++ b/src/stylesheets/_header.scss
@@ -169,9 +169,12 @@ header {
 @media only screen and (max-width: 1023px) {
   .top-header {
     font-size: .8rem;
+    padding-left: 1rem;
   }
 
   .bottom-header {
+    padding: 0 1rem;
+
     li {
       margin: 0 1rem;
   
